<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeviceControlActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:columnCount="7"
        android:rowCount="13">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_on_off"
            android:id="@+id/button_onoff"
            android:layout_row="1"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_muting"
            android:id="@+id/button_muting"
            android:layout_row="1"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_vol_down"
            android:id="@+id/button_vol_down"
            android:layout_row="1"
            android:layout_column="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_vol_up"
            android:id="@+id/button_vol_up"
            android:layout_row="1"
            android:layout_column="3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_fm_1"
            android:id="@+id/button_fm_1"
            android:layout_row="2"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_fm_2"
            android:id="@+id/button_fm_2"
            android:layout_row="2"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_fm_3"
            android:id="@+id/button_fm_3"
            android:layout_row="2"
            android:layout_column="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_fm_4"
            android:id="@+id/button_fm_4"
            android:layout_row="2"
            android:layout_column="3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_fm_5"
            android:id="@+id/button_fm_5"
            android:layout_row="3"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_fm_6"
            android:id="@+id/button_fm_6"
            android:layout_row="3"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_fm_7"
            android:id="@+id/button_fm_7"
            android:layout_row="3"
            android:layout_column="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_fm_8"
            android:id="@+id/button_fm_8"
            android:layout_row="3"
            android:layout_column="3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_deck_play"
            android:id="@+id/button_deck_play"
            android:layout_row="4"
            android:layout_column="0" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_deck_stop"
            android:id="@+id/button_deck_stop"
            android:layout_row="4"
            android:layout_column="1" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_fm_9"
            android:id="@+id/button_fm_9"
            android:layout_row="4"
            android:layout_column="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_fm_0"
            android:id="@+id/button_fm_0"
            android:layout_row="4"
            android:layout_column="3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_cd_play"
            android:id="@+id/button_cd_play"
            android:layout_row="5"
            android:layout_column="0" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_cd_stop"
            android:id="@+id/button_cd_stop"
            android:layout_row="5"
            android:layout_column="1" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_cd_skip_rew"
            android:id="@+id/button_cd_skip_rew"
            android:layout_row="5"
            android:layout_column="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_cd_skip_ff"
            android:id="@+id/button_cd_skip_ff"
            android:layout_row="5"
            android:layout_column="3" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_cd_program"
            android:id="@+id/button_cd_program"
            android:layout_row="6"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_cd_1"
            android:id="@+id/button_cd_1"
            android:layout_row="6"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_cd_2"
            android:id="@+id/button_cd_2"
            android:layout_row="6"
            android:layout_column="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_cd_3"
            android:id="@+id/button_cd_3"
            android:layout_row="6"
            android:layout_column="3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_cd_4"
            android:id="@+id/button_cd_4"
            android:layout_row="7"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_cd_5"
            android:id="@+id/button_cd_5"
            android:layout_row="7"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_cd_6"
            android:id="@+id/button_cd_6"
            android:layout_row="7"
            android:layout_column="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_cd_7"
            android:id="@+id/button_cd_7"
            android:layout_row="7"
            android:layout_column="3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_cd_8"
            android:id="@+id/button_cd_8"
            android:layout_row="8"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_cd_9"
            android:id="@+id/button_cd_9"
            android:layout_row="8"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_cd_0"
            android:id="@+id/button_cd_0"
            android:layout_row="8"
            android:layout_column="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_cd_plus_10"
            android:id="@+id/button_cd_plus_ten"
            android:layout_row="8"
            android:layout_column="3" />

    </GridLayout>
</RelativeLayout>
